objects/CC_Call_Script_Q_A__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Options__c</fullName>
        <description>NGCC Phase1: Stores SFDC Ids of Answer Options associated Question and should only be updated ETL or Through inline UI</description>
        <inlineHelpText>Do Not Edit. This should be edited.</inlineHelpText>
        <label>Answer Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Master_Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1: Reference to Master Question Answer Bank.Will be used for provide translation support</description>
        <inlineHelpText>Master Question Record Reference used in Call Script Q&amp;A</inlineHelpText>
        <label>CC Master Question Bank</label>
        <referenceTo>CC_Master_Question_Answer_Bank__c</referenceTo>
        <relationshipLabel>CC Call Scripts Q/A</relationshipLabel>
        <relationshipName>CC_Call_Scripts_Q_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <description>NGCC Phase1: Reference to the Call Script to the Call Script Q&amp;A is associated.</description>
        <inlineHelpText>Call Script Reference for the associated Call Script Q&amp;A</inlineHelpText>
        <label>CC Call Script</label>
        <referenceTo>CC_Call_Script__c</referenceTo>
        <relationshipLabel>CC Call Scripts Q/A</relationshipLabel>
        <relationshipName>CC_Call_Scripts_Q_A</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Conditionally_Required_Criteria__c</fullName>
        <description>NGCC Phase1: Conditionally Required Validation can be applied in 3 ways. This Stores all three sceanrios and provide enhanced validation flexibility.</description>
        <inlineHelpText>Provide Valid Critieria for Conditional Validation: 1) NULL: Dependent Question Answer is NULL 2) NOT NULL: Dependent Question Answer is Populated 3) Others: Dependent Question Answer is Specific to the Text.</inlineHelpText>
        <label>Conditionally Required Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NULL</fullName>
                </value>
                <value>
                    <fullName>NOT NULL</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditionaly_Required_If__c</fullName>
        <description>NGCC Phase1: Defines the value excepted in the dependent Question. Multiple Options can be Provided using Comma</description>
        <inlineHelpText>Provide exact value expected from Dependent question on which this question is required. Multiple Options cacn be provided using Comma</inlineHelpText>
        <label>Conditionally Required Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1: Reference to the Dependent question on which this question become Required</description>
        <inlineHelpText>Provide the Dependent Question on which the Question is required</inlineHelpText>
        <label>CC Call Script Q/A</label>
        <referenceTo>CC_Call_Script_Q_A__c</referenceTo>
        <relationshipLabel>CC Call Scripts Q/A</relationshipLabel>
        <relationshipName>CC_Call_Scripts_Q_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>NGCC Phase1: Help text used for providing detail about the dependent question</description>
        <inlineHelpText>Provide Help Text to help agent to get reference on dependent questions</inlineHelpText>
        <label>Help Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_to_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1: Define a question Local to SFDC and the question will not be integrated to MODS</description>
        <inlineHelpText>Define if the Question need to be integrated with MODS</inlineHelpText>
        <label>Local to SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_If_Number_Validation__c</fullName>
        <description>NGCC Phase1: Define Number validation question and provide the maximum number to be input</description>
        <inlineHelpText>Provide Maximum Number which can not be exceeded</inlineHelpText>
        <label>Maximum(If Number Validation)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_If_Number_Validation__c</fullName>
        <description>NGCC Phase1: Define Number validation question and provide the minimum number to be expected</description>
        <inlineHelpText>Provide Minimum Number which can not be exceeded</inlineHelpText>
        <label>Minimum(If Number Validation)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <description>NGCC Phase1: Define the Tab where the question will be shown in call script</description>
        <inlineHelpText>Provide the Tab name for the Call Script</inlineHelpText>
        <label>Question Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1:Contact Information</fullName>
                </value>
                <value>
                    <fullName>2:Account Information</fullName>
                </value>
                <value>
                    <fullName>3:Lead Information</fullName>
                </value>
                <value>
                    <fullName>4:Additional Information</fullName>
                </value>
                <value>
                    <fullName>5:Campaign Information</fullName>
                </value>
                <value>
                    <fullName>6:Partner Information</fullName>
                </value>
                <value>
                    <fullName>7:Call Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Required__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1: Define the Dependent Question based on which the question will be conditionally required</description>
        <inlineHelpText>Conditionally required question for which the question will be required</inlineHelpText>
        <label>Conditionally Required on Question</label>
        <referenceTo>CC_Master_Question_Answer_Bank__c</referenceTo>
        <relationshipLabel>CC Call Scripts Q/A (Question Required)</relationshipLabel>
        <relationshipName>CC_Call_Scripts_Q_A1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>NGCC Phase1: Question Text as per Call Script requirement</description>
        <inlineHelpText>English Question Text for the Call Script</inlineHelpText>
        <label>Question Text</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>NGCC Phase1: Question Type for the Question. Define how Question will be Presented in Call Script</description>
        <inlineHelpText>Question Type how the Question will be presented in Call Script</inlineHelpText>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Long Text</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>MultiSelect</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Route To Partner</fullName>
                </value>
                <value>
                    <fullName>Route To AM</fullName>
                </value>
                <value>
                    <fullName>Route To PSR</fullName>
                </value>
                <value>
                    <fullName>Preferred Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1: Define the Question as Mandatory Required</description>
        <inlineHelpText>Define the Question as Mandatory Required</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_on_Lead_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1: Define the Questions which need to appended to Lead Description after Call Script Completion</description>
        <inlineHelpText>Define the Questions which need to appended to Lead Description after Call Script Completion</inlineHelpText>
        <label>Required on Lead Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>NGCC Phase1: Define the Sequence of the Question with Call Script Specific Tab</description>
        <inlineHelpText>Define the Sequence of the Question with Call Script Specific Tab</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Both_Conditional_or_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1: Define if any of the validation is need</description>
        <inlineHelpText>Define if any of the Validation is needed</inlineHelpText>
        <label>Validation(Both Conditional or Required)</label>
        <type>Checkbox</type>
    </fields>
    <description>NGCC Phase1: All Call Script will have list of questionnaire which will be presented to users. Call Script Q&amp;A will be the replica of CC master Question/Answer Bank and customizable at this Call Script Q&amp;A level.</description>
    <label>CC Call Script Q/A</label>
    <nameField>
        <label>CC Call Script Q/A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Call Scripts Q/A</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NGCC_Validate_Conditional_and_Reqd</fullName>
        <active>true</active>
        <description>US5775 - Call Script Validations Sprint 4

If Validation(Both Conditional or Required) = true	Required or (Question Required AND Conditional Required If) or (Min AND Max) must be filled in</description>
        <errorConditionFormula>IF(
   Validation_Both_Conditional_or_Required__c=true,
      IF(Required__c=false,
         IF(
            OR(
               ISBLANK(Maximum_If_Number_Validation__c), 
               ISBLANK(Minimum_If_Number_Validation__c)
               ),
            IF(
               OR(
                  AND(ISBLANK(Conditionaly_Required_If__c),ISPICKVAL(Conditionally_Required_Criteria__c,'Others')),  
                  ISBLANK(Question_Required__c)
                 ),
               true,false),
            false
         ),
      false),
  false)</errorConditionFormula>
        <errorMessage>Please enter valid criteria for validation.
Mandatory  Required OR Number Validation: Minimum(If Number Validation) and Maximum(If Number Validation) OR
Conditionally Required: Question Required and Conditionaly Required If</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGCC_Validate_Min_and_Max_Values</fullName>
        <active>true</active>
        <description>US5775 - Call Script Validations Sprint 4 

If Min and Max NOT NULL, Min must be &lt; Max OR Max must be &gt; Min</description>
        <errorConditionFormula>IF(  AND(NOT(ISNULL( Maximum_If_Number_Validation__c  )),
         NOT(ISNULL( Minimum_If_Number_Validation__c))),

     Minimum_If_Number_Validation__c &gt;  Maximum_If_Number_Validation__c, 

false )</errorConditionFormula>
        <errorMessage>Maximum Value should be greater than Minimum value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGCC_Validation_Answer_Options</fullName>
        <active>true</active>
        <description>US5775 - Call Script Validations Sprint 4

If Question Type is Picklist,MultiSelect,Radio, Answer Option must be filled</description>
        <errorConditionFormula>AND
(
  ISBLANK(Answer_Options__c),
  OR(
     ISPICKVAL(Question_Type__c,'Picklist'),
     ISPICKVAL(Question_Type__c ,'MultiSelect'),
     ISPICKVAL(Question_Type__c,'Radio')
     )
)</errorConditionFormula>
        <errorMessage>Please assign valid options to the Question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGCC_Validation_for_Call_Script_Status</fullName>
        <active>true</active>
        <description>US5775 - Call Script Validations Sprint 4

If CC Call Script is Active , Call Script Q/A cannot be modified</description>
        <errorConditionFormula>Text(Call_Script__r.Status__c) = 'Active'</errorConditionFormula>
        <errorMessage>You cant update Q&amp;A for active Call Script</errorMessage>
    </validationRules>
</CustomObject>